@@ -195,7 +195,7 @@ template<typename T> inline void from_string_float(const char Str[], T &Obj)
   else
   {
     stringstream S(Str);
-#ifdef PQXX_HAVE_LOCALE
+#if defined(PQXX_HAVE_IMBUE)
     S.imbue(locale("C"));
 #endif
     ok = (S >> result);
@@ -332,7 +332,7 @@ template<typename T> inline string to_string_unsigned(T Obj)
 template<typename T> inline string to_string_fallback(T Obj)
 {
   stringstream S;
-#ifdef PQXX_HAVE_LOCALE
+#ifdef PQXX_HAVE_IMBUE
   S.imbue(locale("C"));
 #endif
   S << Obj;
